# antigravity-template-ide-native

./: .cursorrules  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  PLAN.md  README.md  README_CN.md  README_ES.md  mission.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.agent/workflows/: openspec-proposal.md  parallel_architect.md  preflight.md  swarm.md
.archive/: README.md
.archive/completed/: .keep
.archive/deprecated/: .keep
.context/: ACTIVE.md  system_prompt.md
artifacts/: architectural_reasoning_20260213.md  plan_preflight_skills_workflow.md  strategic_preflight_20260213.md
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data/: elvebredd_dump.json
docs/: AMVGG_SCRAPER.md  DETAILED_GUIDE.md  DETAILED_GUIDE_ES.md  PHILOSOPHY.md  REVIEW_TEMPLATE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ES.md  final_review_adoptme.md  review_adoptme.md  skills_registry.md
openspec/: AGENTS.md  project.md
scripts/: reorganize_docs.ps1
server/: index.js  package-lock.json  package.json
specs/: active_context_protocol.md  default_version.md  metadata_test.md  overwrite_spec.md  plan_sync_protocol.md  sections_test.md  test_spec.md
src/tools/: .keep  (+15 more)
supabase/: schema.sql
tests/: conftest.py  test_archive_manager.py  test_common.py  test_data_validator.py  test_docstring_test.py  test_example_tool.py  test_import_test.py  test_multi_func.py  test_overwrite_test.py  test_plan_sync.py  test_scaffold.py  test_syntax_test.py  test_test_stub_check.py  test_typehint_test.py  test_watchdog_sync.py
(+59 files in other folders)
